# colba-mcp

./: README.md  pyproject.toml
colba_mcp/: README.md  __main__.py  client.py  pyproject.toml  server.py
colba_mcp/docs/: update_log.md  workflow_json_creation.md
colba_mcp/tests/: test_pipeline_creation.py  test_server_integration.py  test_server_units.py
