[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colba-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Colba API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.20.0",
]

[project.scripts]
colba-mcp = "colba_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["colba_mcp"]
