[project]
name = "colba-mcp"
version = "0.1.0"
description = "Colba Model Context Protocol Server"
requires-python = ">=3.12"
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "respx>=0.21.0",
]
